--- a/MachineLearningLib/MachineLearningLib.csproj
+++ b/MachineLearningLib/MachineLearningLib.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FisherFTest.cs" />
+    <Compile Include="Matrix.cs" />
+    <Compile Include="MultipleLinearRegression.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleLinearRegression.cs" />
   </ItemGroup>
