--- a/MachineLearningLib/MachineLearningLib.csproj
+++ b/MachineLearningLib/MachineLearningLib.csproj
@@ -43,6 +43,7 @@
     <Compile Include="FisherFTest.cs" />
     <Compile Include="Matrix.cs" />
     <Compile Include="MultipleLinearRegression.cs" />
+    <Compile Include="NOrderSimpleParabolaRegression.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleLinearRegression.cs" />
   </ItemGroup>
